--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [platformio]
-env_default = nodemcuv2
+env_default = gebraeu
 ;env_default = nodemcuv2, oled, thorrax, sonoff, sonoffota, ioexpander
 
 [common_env_data]
@@ -88,4 +88,12 @@ board = esp01_1m
 framework = arduino
 lib_extra_dirs = ./lib_async.legacy
 build_flags = -Wl,-Tesp8266.flash.1m64.ld -DBOARD=Sonoff -DNO_SPIFFS -DLegacyEspAsyncLibraries=true
+lib_deps = ${common_env_data.lib_deps_external}
+
+[env:gebraeu]
+platform = espressif8266@~1.5
+board = nodemcuv2
+framework = arduino
+lib_extra_dirs = ./lib_async.legacy
+build_flags = -Wl,-Tesp8266.flash.4m.ld -DBOARD=Gebraeu_PCB_1 -DLegacyEspAsyncLibraries=true
 lib_deps = ${common_env_data.lib_deps_external}
