--- a/htmljs/package.json
+++ b/htmljs/package.json
@@ -13,6 +13,7 @@
     "grunt": "^1.0.1",
     "grunt-combo-html-css-js": "^0.1.2",
     "grunt-contrib-compress": "^1.4.3",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-htmlmin": "^2.4.0",
     "grunt-contrib-jshint": "^1.1.0",
@@ -22,5 +23,6 @@
     "grunt-postcss": "^0.8.0",
     "grunt-processhtml": "^0.4.1",
     "load-grunt-tasks": "^3.5.2"
-  }
+  },
+  "dependencies": {}
 }
