--- a/platformio.ini
+++ b/platformio.ini
@@ -98,4 +98,6 @@ board = nodemcuv2
 framework = arduino
 lib_extra_dirs = ./lib_async.legacy
 build_flags = -Wl,-Tesp8266.flash.4m.ld -DBOARD=Gebraeu_PCB_1 -DLegacyEspAsyncLibraries=true
+    -DSerialDebug=true
 lib_deps = ${common_env_data.lib_deps_external}
+monitor_baud = 115200
